--- a/UserIdentitySample.Web/Components/Layout/MainLayout.razor
+++ b/UserIdentitySample.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Components.Authorization
 
 <div class="page">
     <div class="sidebar">
@@ -7,6 +8,16 @@
 
     <main>
         <div class="top-row px-4">
+            <CascadingAuthenticationState>
+                <AuthorizeView>
+                    <Authorized>
+                        <a>Welcome @context.User.Identity?.Name!</a>
+                    </Authorized>
+                    <NotAuthorized>
+                        <a href="login">Login</a>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </CascadingAuthenticationState>
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
